--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="wrapper">
-      <h1>Request Header by Steve Failla</h1>
+      <h1>Request Header project by Steve Failla</h1>
 
       <h3>Another Back End Challenge from FreeCodeCamp</h3>
 
